docs: align current project blockers